# TestingSuite

./: .gitignore  CSVmergetest.py  ChristoGoverT_beta.py  ChristoPowerMeter_20092023_PythonCode.txt  ChristoSpecAnSigGen.py  DomePlot_PowerReadings_Raster.py  FindDevices.py  GTpoint03252024.txt  JodySpecAn.py  LISA_T_TEST.py  LISA_T_TEST.txt  LISA_T_TEST2.csv  MSU_PowerMeter_GoverT_03262024_0230UTC_1.csv  MSU_PowerMeter_GoverT_09202023_2300UTC_0.csv  MSU_PowerMeter_GoverT_09202023_2300UTC_0.txt  MSU_PowerMeter_GoverT_09202023_2300UTC_1.csv  MSU_PowerMeter_GoverT_09202023_2300UTC_1.txt  MSU_PowerMeter_GoverT_09202023_2300UTC_2.csv  MSU_PowerMeter_GoverT_09202023_2300UTC_3.csv  MSU_PowerMeter_GoverT_2024_09_04T22_25123.csv  MSU_S_Band_gain_linearity_test_23_01_08.txt  MSU_SpecAn_Testing_01_02_2024.txt  MayoKernel.py  Noahautomation230108v1.py  POWERMETER_TEST.py  PXI_Example.py  PlotTry.py  Py3GPIBFind_testbed.py  Socket_Example.py  SpecAnGPIB_062923.py  SpecAnGPIB_071023.py  SpecAnGPIB_Jody_09062023.py  SpecAn_SigGen_PowMet.py  analysis_script.py  analysis_script.txt  circle_intersection.py  combined_filtered_analysis.py  correct_json.py  curve_fit.py  elevation_column_2.py  (+29 more)
Automation Code/: JodySpecAn.py  JodyTest.py  SpecAnSandbox.py  TestbedGPIB.py
Dome Plot Test Folder/: Dome Plot Test
HWCTRL Logs/: Elevation Profile.176.D037T17-41-00
HWCTRL Logs Feb 6/: On Off Moon.176.D037T18-32-00  Track moon.176.D037T17-22-09
Mila Pointing Predicts Feb 6/: ElevationProfile.txt  GTprocedure_1.txt  GTprocedure_2.txt  OnOff_Pointing.txt
POWER METER Sept 20/: MSU_PowerMeter_GoverT_09202023_2000UTC_13.txt  MSU_PowerMeter_GoverT_09202023_2000UTC_17.txt  MSU_PowerMeter_GoverT_09202023_2000UTC_18.txt  MSU_PowerMeter_GoverT_09202023_2000UTC_28.txt  MSU_PowerMeter_GoverT_09202023_2000UTC_32.txt  MSU_PowerMeter_GoverT_09202023_2000UTC_43.txt  MSU_PowerMeter_GoverT_09202023_2000UTC_46.txt  MSU_PowerMeter_GoverT_09202023_2000UTC_47.txt  MSU_PowerMeter_GoverT_09202023_2000UTC_70.txt  MSU_PowerMeter_GoverT_09202023_2000UTC_72.txt  MSU_PowerMeter_GoverT_09202023_2000UTC_73.txt  MSU_PowerMeter_GoverT_09202023_2000UTC_77.txt  MSU_PowerMeter_GoverT_09202023_2300UTC_17.txt  MSU_PowerMeter_GoverT_09202023_2300UTC_18.txt  MSU_PowerMeter_GoverT_09202023_2300UTC_22.txt  MSU_PowerMeter_GoverT_09202023_2300UTC_3.txt
POWER_METER_Feb_01/: ChristoGoverT_skeleton.py  ChristoGoverT_skeleton_Feb012024.txt  POWERTALK.py
POWER_METER_Sept_20/: MSU_PowerMeter_GoverT_09202023_2000UTC.txt  MSU_PowerMeter_GoverT_09202023_2000UTC_0.txt  (+107 more)
april21govert/: combined_01.csv  (+3 more)
(+89 files in other folders)
