[project]
name = "TestingSuite"
version = "0.1.0"
dependencies = [
  "numpy>=1.0.0,<2.0.0",
  "matplotlib>=3.8.3",
  "pandas>=2.2.1",
  "rich>=13.7.1",
  "pydantic>=2.8.2"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.3",
]

[tool.ruff.lint]
ignore = [
    "F541", # f-string-missing-placeholders (F541)
    "F401", # unused-import
    "B007", # unused-loop-control-variable
    "F841", # unused-variable
]
extend-select = [
    "B",        # flake8-bugbear
    "COM812",   # missing-trailing-comma
    "ISC001",   # single-line-implicit-string-concatenation
    "ISC002",   # multi-line-implicit-string-concatenation
    "ICN001",   # unconventional-import-alias,
    # "PTH",      # flake8-use-pathlib
    "PD",       # pandas-vet            # EXPERIMENTING WITH THIS
    "NPY",      # NumPy-specific rules  # EXPERIMENTING WITH THIS
]
exclude = [
    "MayoKernel.py",    # This file should be deleted
]